   * Rejecting keys that have spaces in them.  Patch by Etienne Posthumus.

   * Fixing exception raising syntax.  Patch by Samuel Stauffer.

   * Optimizations in read code.  Patch by Samuel Stauffer.

   * Changing classes to be newstyle.  Patch by Samuel Stauffer.

   * Changed "has_key" to "in".  Patch by Samuel Stauffer.

   * incr/decr were raising ValueError if the key did not exist, the
     docstring said it returned none.  Patch by Chihiro Sakatoku.

   * Included cmemcache_hash, by permission of Ludvig Ericson.
     To use, do "memcached.cmemcache_activate()".

   * Adding cas method, submitted by Ben Gutierrez.

   * Fix in the docstring for how to use the "set" method.  Found and fixed
     by William McVey

Thu, 02 Apr 2009 13:37:49 -0600  Sean Reifschneider  <jafo@tummy.com>

   * Version 1.44

   * Allowing spaces in the key.  (Patch provided by xmm on Launchpad)

   * Detecting when the pickler needs a positional argument.  (Patch
     provided by Brad Clements on Launchpad)

   * Moving length check after the compression.  (Patch provided by user
     Tom on Launchpad)

   * Fixing arguments passed to the _Error if invalid read length.

   * Fixing the representation of domain sockets.  (Patch provided by user
     MTB on Launchpad)

   * Changing a typo of dead_until.  (Patch provided by Shane R. Spencer)

   * Providing better error messages (patch provided by Johan Euphrosine).

   * Adding get_slabs() function to get stats.  (Patch provided
     by Nick Verbeck)

Sun, 01 Jun 2008 15:05:11 -0600  Sean Reifschneider  <jafo@tummy.com>

   * Version 1.43

   *  eliott reported a bug in the 1.42 related to the socket timeout code
      causing a traceback due to the timeout value not being set.

Sat, 31 May 2008 02:09:17 -0600  Sean Reifschneider  <jafo@tummy.com>

   * Version 1.42

   *  Paul Hummer set up a Launchpad project which I'm going to start using
      to track patches and allow users to set up their own bzr branches and